fix:Special cases for light/dark mode

--- a/packages/design-system/src/css/style.css
+++ b/packages/design-system/src/css/style.css
@@ -135,7 +135,7 @@
   --node-component-executing: var(--color-blue-500);
   --node-component-header: var(--fg-color);
   --node-component-header-icon: var(--color-stone-200);
-  --node-component-header-surface: var(--node-component-surface);
+  --node-component-header-surface: var(--color-white);
   --node-component-outline: var(--color-black);
   --node-component-ring: rgb(from var(--color-gray-500) r g b / 50%);
   --node-component-slot-dot-outline-opacity-mult: 1;
@@ -160,6 +160,7 @@
   --dialog-surface: var(--color-neutral-700);
   --node-component-border: var(--color-charcoal-600);
   --node-component-header-icon: var(--color-slate-300);
+  --node-component-header-surface: var(--color-charcoal-800);
   --node-component-outline: var(--color-white);
   --node-component-ring: rgb(var(--color-gray-500) / 20%);
   --node-component-slot-dot-outline-opacity: 10%;
